--- a/backend/.env.example
+++ b/backend/.env.example
@@ -1,54 +1,16 @@
-# DharmaMind Enterprise Authentication Environment Configuration
+# 🔐 DharmaMind Security Keys (Generated 2025-08-17 11:54:24)
+SECRET_KEY=5TjMV7LZy9Svz3YuUrE5DFrAsCUXitCRJ8SXFxiqMk8
+JWT_SECRET_KEY=cZI8hPQte9TlG_1mTowiZr-a8WOFCDcTHNvtiNsYzXs
+LLM_GATEWAY_API_KEY=q-TMYaRQNGYgs6cjXYj8t_t6OTcSjKl7gL_2zNikUeM
+ENCRYPTION_KEY=PGld-EmAm3gfcAmYTXHGsFGfwogd-22nzsnfEluVTyc
 
-# Database Configuration (PostgreSQL)
-DB_HOST=localhost
-DB_PORT=5432
-DB_NAME=dharmamind
-DB_USER=postgres
-DB_PASSWORD=your_secure_password_here
-DB_MIN_POOL_SIZE=5
-DB_MAX_POOL_SIZE=20
-DB_TIMEOUT=60
+# 🗄️ Database Configuration
+DATABASE_URL=postgresql://dharmamind_user:CHANGE_THIS_PASSWORD@localhost:5432/dharmamind_prod
 
-# Encryption Configuration
-ENCRYPTION_KEY=your_encryption_key_here_32_chars_minimum
+# 🌐 Environment
+ENVIRONMENT=production
+DEBUG=false
 
-# Email Configuration (SMTP)
-SMTP_HOST=smtp.gmail.com
-SMTP_PORT=587
-SMTP_USERNAME=your_email@gmail.com
-SMTP_PASSWORD=your_app_password_here
-SENDER_EMAIL=noreply@dharmamind.ai
-SENDER_NAME=DharmaMind AI
-BASE_URL=http://localhost:3005
-
-# Google OAuth Configuration
-GOOGLE_CLIENT_ID=your_google_client_id_here
-GOOGLE_CLIENT_SECRET=your_google_client_secret_here
-GOOGLE_REDIRECT_URI=http://localhost:5000/auth/google/callback
-
-# JWT Configuration
-JWT_SECRET_KEY=your_jwt_secret_key_here_minimum_32_characters
-JWT_ALGORITHM=HS256
-JWT_EXPIRATION_HOURS=24
-
-# Security Configuration
-RATE_LIMIT_PER_MINUTE=60
-SESSION_TIMEOUT_HOURS=24
-PASSWORD_RESET_TIMEOUT_MINUTES=15
-EMAIL_VERIFICATION_TIMEOUT_HOURS=24
-
-# Development Settings
-ENVIRONMENT=development
-DEBUG=true
-LOG_LEVEL=INFO
-
-# Optional: Redis for session storage and caching
-REDIS_HOST=localhost
-REDIS_PORT=6379
-REDIS_PASSWORD=
-REDIS_DB=0
-
-# Optional: Monitoring and Analytics
-SENTRY_DSN=
-ANALYTICS_KEY=
+# 🔒 Redis Configuration
+REDIS_URL=redis://localhost:6379/0
+REDIS_PASSWORD=CHANGE_THIS_REDIS_PASSWORD
