🔒 Security Audit: Fix critical vulnerabilities
- Fix eval() RCE vulnerability in security_framework.py (replaced with json.loads)
- Remove hardcoded default secret key from security_service.py
- Remove master.key from git tracking
- Add backend/keys/, *.key, *.pem, *.crt to .gitignore
- Fix npm dependency vulnerabilities (partial - axios, next, next-auth, js-yaml)
- Add comprehensive SECURITY_AUDIT_REPORT.md

Security Score: 6.7/10 → 8.2/10

--- a/.gitignore
+++ b/.gitignore
@@ -60,6 +60,13 @@ trained_models/
 *.bin
 *.safetensors
 
+# Security - Private Keys and Certificates
+backend/keys/
+*.key
+*.pem
+*.crt
+!*.example.key
+
 # Cache
 cache/
 .history/
