--- a/Brand_Webpage/package.json
+++ b/Brand_Webpage/package.json
@@ -12,11 +12,13 @@
   "dependencies": {
     "@tailwindcss/forms": "^0.5.10",
     "@tailwindcss/typography": "^0.5.16",
+    "@types/dompurify": "^3.0.5",
     "@types/node": "^20.0.0",
     "@types/react": "^18.0.0",
     "@types/react-dom": "^18.0.0",
     "autoprefixer": "^10.4.0",
     "clsx": "^2.1.1",
+    "dompurify": "^3.3.1",
     "framer-motion": "^12.23.12",
     "next": "^14.0.0",
     "next-auth": "^4.24.11",
