--- a/dharmamind-chat/package.json
+++ b/dharmamind-chat/package.json
@@ -13,6 +13,7 @@
     "@heroicons/react": "^2.2.0",
     "@tailwindcss/forms": "^0.5.10",
     "@tailwindcss/typography": "^0.5.16",
+    "@types/dompurify": "^3.0.5",
     "@types/node": "^20.0.0",
     "@types/react": "^18.0.0",
     "@types/react-dom": "^18.0.0",
@@ -20,6 +21,7 @@
     "autoprefixer": "^10.4.0",
     "axios": "^1.11.0",
     "clsx": "^2.1.1",
+    "dompurify": "^3.3.1",
     "framer-motion": "^12.23.12",
     "lucide-react": "^0.542.0",
     "next": "^14.0.0",
