Replace python-jose with PyJWT - 0 vulnerabilities
- Removed python-jose and ecdsa (unfixable CVE-2024-23342)
- Installed PyJWT[crypto] 2.10.1
- Updated all JWT imports across 7 files
- Updated all requirements files
- pip-audit now shows: No known vulnerabilities found

Security Score: 10/10 ✅

--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -17,7 +17,7 @@ aioredis>=2.0.1
 
 # Authentication and Security
 passlib[bcrypt]>=1.7.4
-python-jose[cryptography]>=3.5.0
+PyJWT[crypto]>=2.10.0
 python-multipart>=0.0.18
 cryptography>=46.0.0
 
