--- a/backend/requirements_enterprise.txt
+++ b/backend/requirements_enterprise.txt
@@ -12,7 +12,7 @@ alembic==1.12.1
 
 # Authentication and Security
 passlib[bcrypt]==1.7.4
-python-jose[cryptography]==3.3.0
+PyJWT[crypto]>=2.10.0
 cryptography==41.0.8
 PyJWT==2.8.0
 python-multipart==0.0.6
