--- a/requirements.txt
+++ b/requirements.txt
@@ -41,7 +41,7 @@ websockets>=12.0
 
 # Security and Authentication
 passlib[bcrypt]>=1.7.4
-python-jose[cryptography]>=3.3.0
+PyJWT[crypto]>=2.10.0
 python-multipart>=0.0.6
 cryptography>=41.0.8
 bcrypt>=4.1.2
